#EXTRA_DIST =			\
#	10club.xpm		\
#	10diamond.xpm		\
#	10heart.xpm		\
#	10spade.xpm		\
#	2club.xpm		\
#	2diamond.xpm		\
#	2heart.xpm		\
#	2spade.xpm		\
#	3club.xpm		\
#	3diamond.xpm		\
#	3heart.xpm		\
#	3spade.xpm		\
#	4club.xpm		\
#	4diamond.xpm		\
#	4heart.xpm		\
#	4spade.xpm		\
#	5club.xpm		\
#	5diamond.xpm		\
#	5heart.xpm		\
#	5spade.xpm		\
#	6club.xpm		\
#	6diamond.xpm		\
#	6heart.xpm		\
#	6spade.xpm		\
#	7club.xpm		\
#	7diamond.xpm		\
#	7heart.xpm		\
#	7spade.xpm		\
#	8club.xpm		\
#	8diamond.xpm		\
#	8heart.xpm		\
#	8spade.xpm		\
#	9club.xpm		\
#	9diamond.xpm		\
#	9heart.xpm		\
#	9spade.xpm		\
#	aceclub.xpm		\
#	acediamond.xpm		\
#	aceheart.xpm		\
#	acespade.xpm		\
#	jackclub.xpm		\
#	jackdiamond.xpm		\
#	jackheart.xpm		\
#	jackspade.xpm		\
#	kingclub.xpm		\
#	kingdiamond.xpm		\
#	kingheart.xpm		\
#	kingspade.xpm		\
#	queenclub.xpm		\
#	queenheart.xpm		\
#	queenspade.xpm		\
#	queendiamond.xpm	\
#	cards.h
