NULL = 

rulesdir  = $(pkgdatadir)/aisleriot/games

rules_DATA  = 			\
	agnes.scm		\
	athena.scm		\
	auld_lang_syne.scm	\
	aunt_mary.scm		\
	backbone.scm		\
	bakers_dozen.scm	\
	bakers_game.scm		\
	beleaguered_castle.scm	\
	block_ten.scm		\
	bristol.scm		\
	camelot.scm		\
	canfield.scm		\
	carpet.scm		\
	chessboard.scm		\
	clock.scm		\
	cover.scm		\
	cruel.scm		\
	diamond_mine.scm	\
	doublets.scm		\
	eagle_wing.scm		\
	easthaven.scm		\
	eight_off.scm		\
	elevator.scm		\
	escalator.scm		\
	first_law.scm		\
	fortress.scm		\
	fortunes.scm		\
	fourteen.scm		\
	freecell.scm		\
	gaps.scm		\
	gay_gordons.scm		\
	glenwood.scm		\
	golf.scm		\
	gypsy.scm		\
	helsinki.scm		\
	hopscotch.scm		\
	isabel.scm		\
	jamestown.scm		\
	jumbo.scm		\
	kansas.scm		\
	king_albert.scm		\
	kings_audience.scm	\
	klondike.scm		\
	labyrinth.scm		\
	lady_jane.scm		\
	maze.scm		\
	monte_carlo.scm		\
	napoleons_tomb.scm	\
	neighbor.scm		\
	odessa.scm		\
	osmosis.scm		\
	peek.scm		\
	pileon.scm		\
	poker.scm		\
	quatorze.scm		\
	royal_east.scm		\
	saratoga.scm		\
	scorpion.scm		\
	scuffle.scm		\
	seahaven.scm		\
	sir_tommy.scm		\
	spider.scm		\
	spider_three_decks.scm	\
	spiderette.scm		\
	straight_up.scm		\
	streets_and_alleys.scm	\
	ten_across.scm  	\
	thieves.scm     	\
	thirteen.scm		\
	thumb_and_pouch.scm	\
	treize.scm		\
	triple_peaks.scm	\
	union_square.scm	\
	valentine.scm		\
	westhaven.scm		\
	whitehead.scm		\
	will_o_the_wisp.scm	\
	yield.scm		\
	yukon.scm		\
	zebra.scm		\
	plait.scm		\
	$(NULL)

EXTRA_DIST = \
	$(rules_DATA)	\
	template.scm
